<resources>
    <string name="app_name">chopecard</string>
    <string name="username_placeholder">Username</string>
    <string name="balance_placeholder">$0.00</string>

    <!-- footer -->
    <string name="cards">Cards\n</string>
    <string name="listed_shops">Listed Shops</string>
    <string name="admin">Admin</string>
    <string name="logout">Logout</string>

    <!-- seller -->
    <string name="add_new_product">Add New Product</string>
    <string name="update_product">Update Product</string>
    <string name="delete_product">Delete Product</string>
    <string name="reserve_product">Reserve Product</string>
    <string name="unreserve_product">Unreserve Product</string>
    <string name="view_reservations">View Reservations</string>
    <string name="view_reservers">View Reservers</string>
    <string name="go_back">Back</string>

    <!-- admin -->
    <string name="tickets">Tickets</string>
    <string name="add_ticket">Add a new ticket</string>
    <string name="delete_ticket">Delete the ticket</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>

    <!-- login -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login\n</string>
    <string name="register">Register</string>

    <!-- ActivityMain -->
    <string name="welcome">Welcome, %1$s</string>
    <string name="reserve_id">Reserve ID</string>
    <string name="password">Password</string>
    <string name="close">Close</string>
    <string name="logo_chopecard">chopecard logo</string>


    <!-- DialogAddProduct -->
    <string name="product_id">Product ID</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>

    <!-- Shop List -->
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">1234 Main Street, Anytown</string>
    <string name="todo">TODO</string>

    <!-- Usage on all activities -->
    <string name="back">Back</string>

    <!-- Product Detail -->
    <string name="price_max_product">price_max_product</string>
    <string name="price_min_product">price_min_product</string>
    <string name="product_name">Product Name</string>
    <string name="min_price">Min Price: %1$s</string>
    <string name="max_price">Max Price: %1$s</string>
    <string name="image_opened">Image Opened</string>

    <!-- Fragment User Reservation List -->
    <string name="listed_reservations">Listed Reservations</string>

    <!--  Reservation Item -->
    <string name="store_name">Store Name</string>
    <string name="quantity_x">Quantity %1$s</string>

</resources>
