<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/body_background"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include layout="@layout/header_layout"
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/tvShopName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:gravity="center"
        android:textColor="@color/primaryFontColor"
        android:textSize="@dimen/text_size_large"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_0dp"
            android:layout_weight="1">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

            <Button
                android:id="@+id/btnAddProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_product"/>

            <Button
                android:id="@+id/btnUpdateProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_product"/>

            <Button
                android:id="@+id/btnDeleteProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_product"/>

            <Button
                android:id="@+id/btnReserveProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reserve_product"/>

            <Button
                android:id="@+id/btnUnreserveProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unreserve_product"/>

            <Button
                android:id="@+id/btnGetReservations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_reservations"/>

            <Button
                android:id="@+id/btnGetReservers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_reservers"/>
        </LinearLayout>
    </ScrollView>
    <include
        layout="@layout/btn_back"
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Conteneur pour le fragment -->
    <include layout="@layout/footer_layout"
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/footer_height"
        android:layout_alignParentBottom="true"
        android:visibility="visible"
        tools:visibility="visible" />
</androidx.appcompat.widget.LinearLayoutCompat>
